--- a/index.html
+++ b/index.html
@@ -4,9 +4,44 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
+    <script src="scripts.js" type="text/javascript" defer></script>
+    <title>Calculator</title>
 </head>
 <body>
-    
+    <div class="calculator">
+        <div id="screen">screen here</div>
+        <div class="buttons">
+            <div class="operators">
+                <div>+</div>
+                <div>-</div>
+                <div>&times;</div>
+                <div>&divide;</div>
+            </div>
+            <div class="leftNumbers">
+                <div class="numbers">
+                    <div>7</div>
+                    <div>8</div>
+                    <div>9</div>
+                </div>
+                <div class="numbers">
+                    <div>4</div>
+                    <div>5</div>
+                    <div>6</div>
+                </div>
+                <div class="numbers">
+                    <div>1</div>
+                    <div>2</div>
+                    <div>3</div>
+                </div>
+                <div class="numbers">
+                    <div>0</div>
+                    <div>.</div>
+                    <div id="clrear">C</div>
+                </div>
+            </div>
+            <div id="equal">=</div>
+        </div>
+    </div>
 </body>
 </html>
