--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="calculator">
         <div id="screen">screen here</div>
         <div class="buttons">
-            <div class="operators">
+            <div class="operators" id="">
                 <div>+</div>
                 <div>-</div>
                 <div>&times;</div>
@@ -37,10 +37,10 @@
                 <div class="numbers">
                     <div>0</div>
                     <div>.</div>
-                    <div id="clrear">C</div>
+                    <div id="clear">C</div>
                 </div>
             </div>
-            <div id="equal">=</div>
+            <div class="equal" id="result">=</div>
         </div>
     </div>
 </body>
