changed styling from css to scss

--- a/index.html
+++ b/index.html
@@ -10,34 +10,34 @@
 </head>
 <body>
     <div class="calculator">
-        <div id="screen">screen here</div>
-        <div class="buttons">
-            <div class="operators" id="">
-                <div>+</div>
-                <div>-</div>
-                <div>&times;</div>
-                <div>&divide;</div>
+        <div class="calculator__screen" id="screen">screen here</div>
+        <div class="calculator__buttons">
+            <div class="calculator__operators">
+                <div class="calculator__operator">+</div>
+                <div class="calculator__operator">-</div>
+                <div class="calculator__operator">&times;</div>
+                <div class="calculator__operator">&divide;</div>
             </div>
-            <div class="leftNumbers">
-                <div class="numbers">
-                    <div>7</div>
-                    <div>8</div>
-                    <div>9</div>
+            <div class="numbers">
+                <div class="numbers__top">
+                    <div class="numbers__number">7</div>
+                    <div class="numbers__number">8</div>
+                    <div class="numbers__number">9</div>
                 </div>
-                <div class="numbers">
-                    <div>4</div>
-                    <div>5</div>
-                    <div>6</div>
+                <div class="numbers__middle">
+                    <div class="numbers__number">4</div>
+                    <div class="numbers__number">5</div>
+                    <div class="numbers__number">6</div>
                 </div>
-                <div class="numbers">
-                    <div>1</div>
-                    <div>2</div>
-                    <div>3</div>
+                <div class="numbers__bottom">
+                    <div class="numbers__number">1</div>
+                    <div class="numbers__number">2</div>
+                    <div class="numbers__number">3</div>
                 </div>
-                <div class="numbers">
-                    <div>0</div>
-                    <div>.</div>
-                    <div id="clear">C</div>
+                <div class="numbers__zero">
+                    <div class="numbers__number">0</div>
+                    <div class="numbers__number">.</div>
+                    <div class="numbers__number" id="clear">C</div>
                 </div>
             </div>
             <div class="equal" id="result">=</div>
