--- a/index.html
+++ b/index.html
@@ -20,22 +20,22 @@
             </div>
             <div class="numbers">
                 <div class="numbers__top">
-                    <button class="numbers__number" id="key" type="button" value="text">7</button>
-                    <button class="numbers__number" id="key" type="button" value="text">8</button>
-                    <button class="numbers__number" id="key" type="button" value="text">9</button>
+                    <button class="numbers__number" id="" type="button" value="text">7</button>
+                    <button class="numbers__number" id="" type="button" value="text">8</button>
+                    <button class="numbers__number" id="" type="button" value="text">9</button>
                 </div>
                 <div class="numbers__middle">
-                    <button class="numbers__number" id="key" type="button" value="text">4</button>
-                    <button class="numbers__number" id="key" type="button" value="text">5</button>
-                    <button class="numbers__number" id="key" type="button" value="text">6</button>
+                    <button class="numbers__number" id="" type="button" value="text">4</button>
+                    <button class="numbers__number" id="" type="button" value="text">5</button>
+                    <button class="numbers__number" id="" type="button" value="text">6</button>
                 </div>
                 <div class="numbers__bottom">
-                    <button class="numbers__number" id="key" type="button" value="text">1</button>
-                    <button class="numbers__number" id="key" type="button" value="text">2</button>
-                    <button class="numbers__number" id="key" type="button" value="text">3</button>
+                    <button class="numbers__number" id="" type="button" value="text">1</button>
+                    <button class="numbers__number" id="" type="button" value="text">2</button>
+                    <button class="numbers__number" id="" type="button" value="text">3</button>
                 </div>
                 <div class="numbers__zero">
-                    <button class="numbers__number" id="key" type="button" value="text">0</button>
+                    <button class="numbers__number" id="" type="button" value="text">0</button>
                     <button class="numbers__number" id="decimal" type="button" value="text">.</button>
                     <button class="numbers__number" id="clear"  type="button" value="text">C</button>
                 </div>
